# ldc

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: release.yml
api/: feedback.ts
docs/: ARCHITECTURE.md  ATTESTATION_NF525.md  GUIDE_UTILISATEUR.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: customer-display.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: caisse.rs  cashiers.rs  catalogue.rs  compliance.rs  dev.rs  journal.rs  mod.rs  open_orders.rs  print.rs  settings.rs  tables.rs  transactions.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_foundation.sql  002_catalogue.sql  003_sessions.sql  004_transactions.sql  005_journal.sql  006_sync.sql  007_seed_dev.sql  008_add_titre_resto.sql  009_settings.sql  010_tables.sql  011_open_orders.sql  012_cashiers.sql  013_default_manager.sql  014_clean_seed.sql  015_clean_tables.sql
src-tauri/src/db/models/: cashier.rs  mod.rs  open_order.rs  product.rs  session.rs  table.rs  transaction.rs
src-tauri/src/nf525/: chain.rs  grand_total.rs  mod.rs
src-tauri/src/printer/: escpos.rs
src-tauri/src/sync/: mod.rs
src/components/layout/: GhostSideNav.tsx  SideNav.tsx  TopBar.tsx  navStore.ts
src/features/caisse/: CaisseView.tsx  store.ts
src/lib/: mockData.ts  tauri.ts  utils.ts
src/types/: cashier.ts  catalogue.ts  open_order.ts  session.ts  settings.ts  table.ts  transaction.ts
(+39 files in other folders)
