[package]
name = "ldc"
version = "0.5.1"
description = "Logiciel de Caisse NF525 — open source"
authors = []
edition = "2021"

[lib]
name = "ldc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                = { version = "2", features = [] }
tauri-plugin-opener  = "2"
tauri-plugin-updater = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
sqlx             = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
tokio            = { version = "1", features = ["full"] }
sha2             = "0.10"
hex              = "0.4"
uuid             = { version = "1", features = ["v4"] }
chrono           = { version = "0.4", features = ["serde"] }
thiserror        = "1"
anyhow           = "1"

